[package]
name = "windows-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.152"
socket2 = "0.5.5"
tokio = { version = "1.32.0", features = ["rt", "macros", "net"] }
windows-sys = { version  = "0.52.0", features = ["Win32", "Win32_Networking", "Win32_Networking_WinSock"] }
